tests/invalid/int_ops.err_exp
int_ops.m:021: In clause for predicate `p'/2:
int_ops.m:021:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`<'/2.[39;49m
int_ops.m:021:   In Mercury, if you want to invoke a numeric comparison
int_ops.m:021:   operation such as [38;5;87m`<',[39;49m then you must import a module that
int_ops.m:021:   exports that operation. The modules in the Mercury standard
int_ops.m:021:   library that do so include [38;5;87m`int',[39;49m [38;5;87m`uint',[39;49m their sized versions
int_ops.m:021:   (such as [38;5;87m`int8'[39;49m and [38;5;87m`uint16'[39;49m), as well as [38;5;87m`integer'[39;49m and
int_ops.m:021:   [38;5;87m`float'.[39;49m However, [38;5;226mnone of those modules have[39;49m
int_ops.m:021:   [38;5;226m`:- import_module' declarations.[39;49m
int_ops.m:021:   If the values you are trying to compare are not numbers, then
int_ops.m:021:   what you probably want is the builtin [38;5;226m`@<'[39;49m operation.
int_ops.m:022: In clause for predicate `p'/2:
int_ops.m:022:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`<<'/2.[39;49m
int_ops.m:022:   In Mercury, if you want to invoke a bit manipulation operation
int_ops.m:022:   such as [38;5;87m`<<',[39;49m then you must import a module that exports that
int_ops.m:022:   operation. The modules in the Mercury standard library that do
int_ops.m:022:   so include [38;5;87m`int',[39;49m [38;5;87m`uint',[39;49m their sized versions (such as [38;5;87m`int8'[39;49m
int_ops.m:022:   and [38;5;87m`uint16'[39;49m), as well as [38;5;87m`integer'[39;49m. However, [38;5;226mnone of those[39;49m
int_ops.m:022:   [38;5;226mmodules have `:- import_module' declarations.[39;49m
int_ops.m:023: In clause for predicate `p'/2:
int_ops.m:023:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`>='/2.[39;49m
int_ops.m:023:   In Mercury, if you want to invoke a numeric comparison
int_ops.m:023:   operation such as [38;5;87m`>=',[39;49m then you must import a module that
int_ops.m:023:   exports that operation. The modules in the Mercury standard
int_ops.m:023:   library that do so include [38;5;87m`int',[39;49m [38;5;87m`uint',[39;49m their sized versions
int_ops.m:023:   (such as [38;5;87m`int8'[39;49m and [38;5;87m`uint16'[39;49m), as well as [38;5;87m`integer'[39;49m and
int_ops.m:023:   [38;5;87m`float'.[39;49m However, [38;5;226mnone of those modules have[39;49m
int_ops.m:023:   [38;5;226m`:- import_module' declarations.[39;49m
int_ops.m:023:   If the values you are trying to compare are not numbers, then
int_ops.m:023:   what you probably want is the builtin [38;5;226m`@>='[39;49m operation.
int_ops.m:024: In clause for predicate `p'/2:
int_ops.m:024:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`*'/2.[39;49m
int_ops.m:024:   In Mercury, if you want to invoke an arithmetic operation such
int_ops.m:024:   as [38;5;87m`*',[39;49m then you must import a module that exports that
int_ops.m:024:   operation. The modules in the Mercury standard library that do
int_ops.m:024:   so include [38;5;87m`int',[39;49m [38;5;87m`uint',[39;49m their sized versions (such as [38;5;87m`int8'[39;49m
int_ops.m:024:   and [38;5;87m`uint16'[39;49m), as well as [38;5;87m`integer'[39;49m and [38;5;87m`float'.[39;49m However, [38;5;226mnone[39;49m
int_ops.m:024:   [38;5;226mof those modules have `:- import_module' declarations.[39;49m
int_ops.m:026: In clause for predicate `p'/2:
int_ops.m:026:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`//'/2.[39;49m
int_ops.m:026:   In Mercury, if you want to invoke an arithmetic operation such
int_ops.m:026:   as [38;5;87m`//',[39;49m then you must import a module that exports that
int_ops.m:026:   operation. The modules in the Mercury standard library that do
int_ops.m:026:   so include [38;5;87m`int',[39;49m [38;5;87m`uint',[39;49m their sized versions (such as [38;5;87m`int8'[39;49m
int_ops.m:026:   and [38;5;87m`uint16'[39;49m), as well as [38;5;87m`integer'[39;49m. However, [38;5;226mnone of those[39;49m
int_ops.m:026:   [38;5;226mmodules have `:- import_module' declarations.[39;49m
